# 4sr

./: configure  configure.ac
data/reasoner/: circular.ttl  kk.ttl  kk2.ttl  test2.ttl  test_join.trig  update.ttl  vehicles.ttl
src/: Makefile  Makefile.am  reasoner.mk
src/backend/: Makefile  Makefile.am  backend-intl.h  query-backend.c  query-backend.h  rhash.c  server.c
src/common/: 4s-client.c  4s-datatypes.h  4s-mdns.c  4s-server.c  4store.h  Makefile  Makefile.am  datatypes.h  params.h.in
src/frontend/: 4s-bind.c  4s-query.c  Makefile  import.c  query-cache.c  query-cache.h  query-datatypes.c  query-datatypes.h  query.c  query.h  results.c  update.c
src/http/: Makefile  httpd.c  httpd.h
src/reasoner/: 4s-reasoner-backend.c  4s-reasoner-backend.h  4s-reasoner-common.c  4s-reasoner-common.h  4s-reasoner-query.c  4s-reasoner-query.h  4s-reasoner.c  Makefile  Makefile.am
tests/httpd/: sparql.sh
tests/httpd/exemplar/: zfsr_reasoning_rdfs
tests/httpd/scripts/: zfsr_reasoning_rdfs
tests/query/: run.pl
tests/reasoner/: run_circular_tests.pl  run_vehicle_tests.pl
tests/reasoner/exemplar/: circular-Spo-ge  circular-domainAsP-og  circular-range-og  circular-sc-a-eg  circular-sc-a-neg  circular-sc-a-og  circular-spo-oax-og  circular-subP-type-range  vehicle-ranges-nodups
tests/reasoner/queries/: circular-Spo-ge  circular-domainAsP-og  circular-p1-ng  circular-range-ge  circular-range-og  circular-rangeAsP-eg  circular-sc-a-neg  circular-sc-a-og  circular-spo-oax-og  circular-subP-type-range  vehicle-ranges-nodups
(+2 files in other folders)
